# python-project-template

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pipeline-dev.yml  release.yml
docs/: CONTRIBUTING.md
src/: main.py
tests/: test_main.py
